--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -57,8 +57,9 @@
     <Compile Include="Circle.xaml.cs">
       <DependentUpon>Circle.xaml</DependentUpon>
     </Compile>
-    <Compile Include="Table.xaml.cs">
-      <DependentUpon>Table.xaml</DependentUpon>
+    <Compile Include="Models\Table.cs" />
+    <Compile Include="TablesLayout.xaml.cs">
+      <DependentUpon>TablesLayout.xaml</DependentUpon>
     </Compile>
     <Page Include="Circle.xaml">
       <SubType>Designer</SubType>
@@ -76,7 +77,7 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="Table.xaml">
+    <Page Include="TablesLayout.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
