--- a/WpfApp1/WpfApp1.csproj
+++ b/WpfApp1/WpfApp1.csproj
@@ -59,8 +59,11 @@
     </Compile>
     <Compile Include="Models\Item.cs" />
     <Compile Include="Models\Table.cs" />
-    <Compile Include="TablesLayout.xaml.cs">
-      <DependentUpon>TablesLayout.xaml</DependentUpon>
+    <Compile Include="Pages\EditPage.xaml.cs">
+      <DependentUpon>EditPage.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Pages\TablesPage.xaml.cs">
+      <DependentUpon>TablesPage.xaml</DependentUpon>
     </Compile>
     <Page Include="Circle.xaml">
       <SubType>Designer</SubType>
@@ -78,7 +81,11 @@
       <DependentUpon>MainWindow.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
-    <Page Include="TablesLayout.xaml">
+    <Page Include="Pages\EditPage.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Pages\TablesPage.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
