change namepace root from WpfApp1 to RestaurantPOS

--- a/WpfApp1/RestaurantPOS.csproj
+++ b/WpfApp1/RestaurantPOS.csproj
@@ -54,6 +54,7 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Converter\MultplierConverter.cs" />
     <Compile Include="Dialogs\Templates\DependencyRow.xaml.cs">
       <DependentUpon>DependencyRow.xaml</DependentUpon>
     </Compile>
