--- a/WpfApp1/RestaurantPOS.csproj
+++ b/WpfApp1/RestaurantPOS.csproj
@@ -58,6 +58,9 @@
     <Compile Include="Dialogs\Templates\DependencyRow.xaml.cs">
       <DependentUpon>DependencyRow.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Dialogs\YesNoCancelDialog.xaml.cs">
+      <DependentUpon>YesNoCancelDialog.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Models\Circle.xaml.cs">
       <DependentUpon>Circle.xaml</DependentUpon>
     </Compile>
@@ -91,6 +94,10 @@
       <DependentUpon>AddItemDialog.xaml</DependentUpon>
     </Compile>
     <Page Include="Dialogs\Templates\DependencyRow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="Dialogs\YesNoCancelDialog.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
