--- a/RestaurantPOS/RestaurantPOS.csproj
+++ b/RestaurantPOS/RestaurantPOS.csproj
@@ -6,8 +6,8 @@
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{EE08A675-1ABF-442E-9472-C22F6F775D9E}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <RootNamespace>WpfApp1</RootNamespace>
-    <AssemblyName>WpfApp1</AssemblyName>
+    <RootNamespace>RestaurantPOS</RootNamespace>
+    <AssemblyName>RestaurantPOS</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
@@ -61,6 +61,7 @@
       <DependentUpon>YesNoCancelDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="Dictionaries\InventoryNameObjectDict.cs" />
+    <Compile Include="Dictionaries\ItemNameObjectDict.cs" />
     <Compile Include="Models\Circle.xaml.cs">
       <DependentUpon>Circle.xaml</DependentUpon>
     </Compile>
@@ -94,6 +95,7 @@
     <Compile Include="Dialogs\EditItemDialog.xaml.cs">
       <DependentUpon>EditItemDialog.xaml</DependentUpon>
     </Compile>
+    <Compile Include="SerializedData\ItemsList.cs" />
     <Page Include="Dialogs\Templates\DependencyRow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
