--- a/RestaurantPOS/RestaurantPOS.csproj
+++ b/RestaurantPOS/RestaurantPOS.csproj
@@ -66,6 +66,7 @@
       <DependentUpon>Circle.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\MultiplierConverter.cs" />
+    <Compile Include="Models\DatabaseItemNameCategoryQuantity.cs" />
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\InventoryConsumption.cs" />
     <Compile Include="Models\Item.cs" />
@@ -96,6 +97,7 @@
       <DependentUpon>EditItemDialog.xaml</DependentUpon>
     </Compile>
     <Compile Include="SerializedData\ItemsList.cs" />
+    <Compile Include="SerializedData\TablesList.cs" />
     <Page Include="Dialogs\Templates\DependencyRow.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
