Change ItemNameCategoryQUantity to TableItemInfo

--- a/RestaurantPOS/RestaurantPOS.csproj
+++ b/RestaurantPOS/RestaurantPOS.csproj
@@ -68,7 +68,7 @@
       <DependentUpon>Circle.xaml</DependentUpon>
     </Compile>
     <Compile Include="Converters\MultiplierConverter.cs" />
-    <Compile Include="Models\ItemNameCategoryQuantity.cs" />
+    <Compile Include="Models\TableItemInfo.cs" />
     <Compile Include="Models\Inventory.cs" />
     <Compile Include="Models\InventoryConsumption.cs" />
     <Compile Include="Models\Item.cs" />
